test/fail/error-format-json.mo
//MOC-FLAG --error-format json

do {
  let true = true;
};

let _ : Nat = "abc";
